# rules_latex

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  DESIGN.md  LICENSE  MODULE.bazel  README.md
.bcr/: README.md  config.yml  metadata.template.json  source.template.json
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  release_prep.sh
docs/: BUILD.bazel  mkdocs.yml  regenerate.sh
docs/site/: index.md
docs/site/about/: design.md  roadmap.md
docs/site/api/: providers.md  rules.md  toolchain.md
docs/site/concepts/: caching.md  hermetic-builds.md  reproducibility.md
docs/site/getting-started/: bibliography.md  first-document.md  installation.md  live-preview.md
example/: .bazelrc  BUILD.bazel  MODULE.bazel  hello.tex  thesis_like.bib  thesis_like.tex
examples/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
examples/_shared/logo/: BUILD.bazel
examples/beamer/: BUILD.bazel  slides.tex
examples/cv/: BUILD.bazel  cv.tex
examples/hello/: BUILD.bazel  preamble.tex
examples/letter/: BUILD.bazel  letter.tex
examples/paper/: BUILD.bazel  paper.tex  references.bib
examples/thesis/: BUILD.bazel  main.tex  references.bib
examples/thesis/chapters/: 01_introduction.tex  02_background.tex  03_results.tex
latex/: BUILD.bazel  defs.bzl  providers.bzl
latex/private/: BUILD.bazel  biber_versions.bzl  bundles.bzl  latex_cache_snapshot.bzl  latex_document.bzl  latex_library.bzl  latex_pkg.bzl  latex_serve.bzl  latex_serve_web.bzl  latex_test.bzl  pdfjs_versions.bzl  serve_watcher.py.tpl  serve_web.py.tpl  versions.bzl
latex/toolchain/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
latex/web/: BUILD.bazel  extensions.bzl  repositories.bzl
tests/: BUILD.bazel
tests/py/: BUILD.bazel  run_pytest.sh  test_editor_detection.py  test_http_head.py  test_make_cache_snapshot.py  test_pdf_chunks.py  test_post_build_hook.py  test_serve_cache.py  test_staging.py  test_synctex_parser.py  test_watcher_debouncer.py
tests/starlark/: BUILD.bazel  latex_document_test.bzl
tools/: BUILD.bazel  make_cache_snapshot.py  pdf_chunks.py  serve_cache.py  staging.py  tectonic_compile.py  tectonic_populate_cache.py
