"""rules_latex - Bazel rules for building LaTeX documents with Tectonic.

See https://github.com/nicklambourne/rules_latex for details.
"""

module(
    name = "rules_latex",
    version = "0.1.0",
    compatibility_level = 1,
)

# Standard dependencies.
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Module extension that registers the tectonic toolchain repos.
tectonic = use_extension("//latex/toolchain:extensions.bzl", "tectonic")
tectonic.toolchain()
use_repo(
    tectonic,
    "rules_latex_tectonic_toolchains",
    # Per-platform repos that hold the downloaded tectonic binaries.
    "rules_latex_tectonic_linux_aarch64",
    "rules_latex_tectonic_linux_x86_64",
    "rules_latex_tectonic_macos_aarch64",
    "rules_latex_tectonic_macos_x86_64",
)

register_toolchains("@rules_latex_tectonic_toolchains//:all")
