load("@rules_latex//latex:defs.bzl", "latex_cache_snapshot", "latex_document", "latex_library", "latex_test")

# A tiny helper library with a shared preamble.
latex_library(
    name = "preamble",
    srcs = ["preamble.tex"],
)

# A minimal "hello, world" document that uses the helper library above.
latex_document(
    name = "hello",
    srcs = ["hello.tex"],
    main = "hello.tex",
    deps = [":preamble"],
)

# Same document, but built deterministically: identical inputs produce
# byte-identical output.
latex_document(
    name = "hello_reproducible",
    srcs = ["hello.tex"],
    main = "hello.tex",
    reproducible = True,
    deps = [":preamble"],
)

# Same document, built fully offline against a small (~10 MB) cache
# snapshot. The snapshot tarball is produced once by `bazel run
# //:hello_snapshot` (requires internet) and checked into the repo;
# every subsequent build is hermetic and skips the 3 GB upstream bundle.
latex_document(
    name = "hello_offline",
    srcs = ["hello.tex"],
    cache = "hello_cache.tar.gz",
    main = "hello.tex",
    deps = [":preamble"],
)

# Developer command: refresh the cache snapshot. Run with:
#     bazel run //:hello_snapshot
latex_cache_snapshot(
    name = "hello_snapshot",
    srcs = ["hello.tex"],
    main = "hello.tex",
    output = "hello_cache.tar.gz",
    deps = [":preamble"],
)

# Regression test: compile hello.tex and make sure no LaTeX errors show
# up in the log. Uses the checked-in cache snapshot so the test runs
# fully offline and finishes in ~3 seconds instead of pulling fresh
# packages over the network.
latex_test(
    name = "hello_compiles",
    srcs = ["hello.tex"],
    cache = "hello_cache.tar.gz",
    main = "hello.tex",
    deps = [":preamble"],
)
