"""Example workspace that consumes rules_latex from its parent directory.

Run from this directory:

    bazel build //:hello
"""

module(
    name = "rules_latex_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_latex", version = "0.3.0")

# When running directly out of the rules_latex git checkout, override the
# resolved location to point at the parent directory. Drop this stanza when
# consuming a published version from BCR or another registry.
local_path_override(
    module_name = "rules_latex",
    path = "..",
)

tectonic = use_extension("@rules_latex//latex/toolchain:extensions.bzl", "tectonic")
tectonic.toolchain()
use_repo(tectonic, "rules_latex_tectonic_toolchains")

register_toolchains("@rules_latex_tectonic_toolchains//:all")

# Vendored PDF.js used by latex_serve_web. The download is lazy: it
# only happens when a target that actually needs it (e.g.
# //:hello_serve_web) is built.
pdfjs = use_extension("@rules_latex//latex/web:extensions.bzl", "pdfjs")
use_repo(pdfjs, "rules_latex_pdfjs")
