# Developer-facing helpers run via `bazel run`.
#
# Nothing under this package is part of the public rules_latex API.

package(default_visibility = ["//visibility:public"])

# Three scripts and a shared library that drive the rules_latex
# tectonic action paths:
#
#   - staging.py: shared layout logic (main-rooted staging).
#   - tectonic_populate_cache.py: TectonicPopulateCache action wrapper
#     and the worker behind `latex_cache_snapshot`.
#   - tectonic_compile.py: TectonicCompile action wrapper.
#
# Exposed as plain files rather than py_binary because we deliberately
# don't take a `rules_python` dependency for stdlib-only tools — see
# tracking issue #2 for the trade-off.
exports_files([
    "staging.py",
    "tectonic_populate_cache.py",
    "tectonic_compile.py",
])
