"""A single-page packed-layout CV.

Demonstrates:
  * A real-world CV layout with custom `\\header` and `\\itemize`
    tweaks, similar to the kind of thing many users will already
    have.
  * `latex_serve_web` for the typical 'edit-and-see-it-update' CV
    workflow.
"""

load("@rules_latex//latex:defs.bzl", "latex_document", "latex_serve_web", "latex_test")

latex_document(
    name = "cv",
    srcs = ["cv.tex"],
    main = "cv.tex",
    synctex = True,
    visibility = ["//visibility:public"],
)

# `bazel run //cv:cv_serve` -> in-browser live preview with SyncTeX
# click-to-source.
latex_serve_web(
    name = "cv_serve",
    document = ":cv",
    port = 8767,
)

latex_test(
    name = "cv_compiles",
    srcs = ["cv.tex"],
    main = "cv.tex",
)
