"""Minimal hello-world LaTeX document.

The simplest possible rules_latex usage: a single .tex file, a tiny
shared preamble, and a target that compiles them. Also demonstrates
the reproducible mode, the manual cache snapshot path, the live
preview rules, and the latex_test regression-testing rule.

For real-world document shapes (letter, CV, paper, thesis, beamer)
see the sibling example directories.
"""

load(
    "@rules_latex//latex:defs.bzl",
    "latex_cache_snapshot",
    "latex_document",
    "latex_library",
    "latex_serve",
    "latex_serve_web",
    "latex_test",
)

# A tiny helper library with a shared preamble.
latex_library(
    name = "preamble",
    srcs = ["preamble.tex"],
)

# A minimal "hello, world" document that uses the helper library above.
latex_document(
    name = "hello",
    srcs = ["hello.tex"],
    main = "hello.tex",
    visibility = ["//visibility:public"],
    deps = [":preamble"],
)

# Same document, but built deterministically: identical inputs produce
# byte-identical output.
latex_document(
    name = "hello_reproducible",
    srcs = ["hello.tex"],
    main = "hello.tex",
    reproducible = True,
    deps = [":preamble"],
)

# Same document, built fully offline against a small (~10 MB) cache
# snapshot. The snapshot tarball is produced once by `bazel run
# //hello:hello_snapshot` (requires internet) and checked into the
# repo; every subsequent build is hermetic and skips the implicit
# cache pipeline entirely.
latex_document(
    name = "hello_offline",
    srcs = ["hello.tex"],
    cache = "hello_cache.tar.gz",
    main = "hello.tex",
    deps = [":preamble"],
)

# Developer command: refresh the cache snapshot. Run with:
#     bazel run //hello:hello_snapshot
latex_cache_snapshot(
    name = "hello_snapshot",
    srcs = ["hello.tex"],
    main = "hello.tex",
    output = "examples/hello/hello_cache.tar.gz",
    deps = [":preamble"],
)

# Live-preview workflow: opens the PDF in the system viewer and
# rebuilds on every source save.
latex_serve(
    name = "hello_serve",
    document = ":hello_offline",
)

# In-browser live-preview workflow: http://127.0.0.1:8765/
latex_serve_web(
    name = "hello_serve_web",
    document = ":hello_offline",
)

# Same document built with synctex output, wired into a serve target
# so clicking in the rendered PDF jumps to the corresponding source
# location.
latex_document(
    name = "hello_synctex",
    srcs = ["hello.tex"],
    cache = "hello_cache.tar.gz",
    main = "hello.tex",
    synctex = True,
    deps = [":preamble"],
)

latex_serve_web(
    name = "hello_synctex_serve",
    document = ":hello_synctex",
    port = 8766,
)

# Regression test: compile hello.tex and assert no LaTeX errors in the
# log. Uses the checked-in snapshot so it runs offline and finishes in
# ~3 seconds.
latex_test(
    name = "hello_compiles",
    srcs = ["hello.tex"],
    cache = "hello_cache.tar.gz",
    main = "hello.tex",
    deps = [":preamble"],
)
